--- a/book/main.tex
+++ b/book/main.tex
@@ -45,7 +45,7 @@
 \documentclass[11pt,fleqn]{book} % Default font size and left-justified equations
 
 \input{structure.tex} % Insert the commands.tex file which contains the majority of the structure behind the template
-
+\usepackage{subcaption}
 %\hypersetup{pdftitle={Title},pdfauthor={Author}} % Uncomment and fill out to include PDF metadata for the author and title of the book
 
 %----------------------------------------------------------------------------------------
